# picup

./: .gitignore  README.md  db.py  main.py  pyproject.toml
src/: db.py  embed_clip.py  main.py  upload_cli.py  utils.py
