[project]
name = "picup"
version = "0.1.0"
description = "Picture Upload from file or URL with duplication detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "filetype>=1.2.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.13",
]
